# tuning

./: .env  .gitignore  README.md  main.py  pyproject.toml
exps/math_rlvr/: __init__.py  dataloader.py  models.py  train.py  utils.py
notebooks/: finetune.ipynb  tinker.ipynb
